Fix long text truncation; header truncation

--- a/packages/core/components/FileDetails/MetadataList/Value.module.css
+++ b/packages/core/components/FileDetails/MetadataList/Value.module.css
@@ -1,8 +1,26 @@
+.container {
+    width: 100%;
+}
+
 .link {
     color: var(--aqua);
 }
 
 .link:hover {
+    color: var(--bright-aqua);
+}
+
+.toggle-container {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.toggle-container i {
+    color: var(--aqua);
+    font-size: 12px;
+}
+
+.toggle-container i:hover {
     color: var(--bright-aqua);
 }
 
