--- a/packages/core/components/FileList/Header.module.css
+++ b/packages/core/components/FileList/Header.module.css
@@ -42,6 +42,9 @@
 }
 
 .header-tooltip-wrapper {
+  display: block;
+  flex: 1 1 auto;
+  width: 100%;
   min-width: 0;
   overflow: hidden;
 }
